--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -40,3 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+
+.react-datepicker-popper {
+  z-index: 99999 !important;
+}
+
+.react-datepicker {
+  z-index: 99999 !important;
+}
